WIP - Adding backend-module, controller, service and tests
Signed-off-by: VandeJr <vanderlei.jordao.jr@outlook.com>